external-crates/move/move-compiler/tests/move_check/typing/const_in_const.exp
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/typing/const_in_const.move:4:20
  │
4 │ const C_ONE: u64 = C_ZERO + 1;
  │                    ^^^^^^ Constants in constants are not supported by current edition 'legacy', only '2024.alpha' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/typing/const_in_const.move:6:35
  │
6 │ const C_VEC: vector<u64> = vector[C_ZERO, C_ONE, C_TWO];
  │                                   ^^^^^^ Constants in constants are not supported by current edition 'legacy', only '2024.alpha' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/typing/const_in_const.move:6:43
  │
6 │ const C_VEC: vector<u64> = vector[C_ZERO, C_ONE, C_TWO];
  │                                           ^^^^^ Constants in constants are not supported by current edition 'legacy', only '2024.alpha' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/typing/const_in_const.move:6:50
  │
6 │ const C_VEC: vector<u64> = vector[C_ZERO, C_ONE, C_TWO];
  │                                                  ^^^^^ Constants in constants are not supported by current edition 'legacy', only '2024.alpha' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/typing/const_in_const.move:8:34
  │
8 │ const C_V2: vector<u64> = vector[C_ZERO, C_FIVE];
  │                                  ^^^^^^ Constants in constants are not supported by current edition 'legacy', only '2024.alpha' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/typing/const_in_const.move:8:42
  │
8 │ const C_V2: vector<u64> = vector[C_ZERO, C_FIVE];
  │                                          ^^^^^^ Constants in constants are not supported by current edition 'legacy', only '2024.alpha' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

